# Lightdv2

./: .gitignore  Cargo.toml  Makefile  config.json  readme.md
docs/: AI-QUICK-REFERENCE.md  README.md  authentication.md  containers.md  firewall.md  network.md  remote.md  response-examples.md  websocket.md  why.nadhi
src/: main.rs
src/auth/: middleware.rs  mod.rs  tokens.rs
src/billing/: estimator.rs  mod.rs  tracker.rs
src/cli/: token.rs
src/config/: config.rs
src/container/: lifecycle.rs  manager.rs  mod.rs  network.rs  power.rs  state.rs  update.rs  user.rs
src/daemon/: mod.rs  start.rs  timer.rs
src/filesystem/: fileinfo.rs  handler.rs  mod.rs  quota.rs  security.rs  volume.rs
src/network/: firewall.rs  mod.rs  pool.rs
src/remote/: client.rs  mod.rs
src/router/: auth.rs  billing.rs  container.rs  filesystem.rs  firewall.rs  mod.rs  network.rs  public.rs  remote.rs  sftp.rs
src/servers/: list.rs
src/sftp/: credentials.rs  mod.rs  protocol.rs  server.rs  session.rs
src/websocket/: console.rs  event_hub.rs  handler.rs  mod.rs  stats.rs
storage/containers.db/: db  snap.0000000000003DB5
storage/containers/network-test-001/: entrypoint.sh
storage/containers/power-test-001/: entrypoint.sh
storage/containers/test-server-001/: entrypoint.sh  install.sh
storage/containers/test-server-002/: entrypoint.sh
tests/: answer.md  billing.js  container-update.js  container.js  files-detailed.js  firewall.js  full-integration.js  network-rebind.js  network.js  power-actions.js  sftp.js  text.md  volume-quota.js  volume.js  websocket-ui.html
(+1 files in other folders)
