[package]
name = "Lightd-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros", "ws"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.4"
sled = "0.34"
rand = "0.8"
bollard = "0.17"
futures = "0.3"
tokio-stream = "0.1"
regex = "1.10"
dashmap = "5.5"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
infer = "0.16"

